deploy/k8s/http-only/client-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: client-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      component: client
  template:
    metadata:
      labels:
        component: client
    spec:
      containers:
        - name: client
          image: jchen42703/ch-tl-ui:latest
          ports:
            - containerPort: 3006
          resources:
            requests:
              memory: "500Mi"
              cpu: "1"
            limits:
              memory: "1Gi"
              cpu: "1"
